--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,12 @@ jobs:
         with:
           dotnet-version: "6.0.x"
 
+      - name: Checkout Local Framewrok
+        run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
+
+      - name: Use Local Framework
+        run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
+
       - name: Compile
         run: dotnet build -c Debug -warnaserror osu.Desktop.slnf
 
@@ -118,6 +124,12 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: "6.0.x"
+      
+      - name: Checkout Local Framewrok
+        run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
+
+      - name: Use Local Framework
+        run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
 
       - name: Install .NET workloads
         run: dotnet workload install maui-android
@@ -146,6 +158,12 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: "6.0.x"
+
+      - name: Checkout Local Framewrok
+        run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
+
+      - name: Use Local Framework
+        run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
 
       - name: Install .NET Workloads
         run: dotnet workload install maui-ios
