--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,7 +93,11 @@ jobs:
       - name: Checkout Local Framewrok
         run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
 
-      - name: Use Local Framework
+      - name: Use Local Framework Windows
+        if: matrix.os == 'windows-latest'
+        run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
+
+        - name: Use Local Framework Unix
         run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
 
       - name: Compile
