--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -95,7 +95,8 @@ jobs:
 
       - name: Use Local Framework Windows
         if: matrix.os == 'windows-latest'
-        run: .\UseLocalFramework.ps1
+        with:
+          run: .\UseLocalFramework.ps1
 
         - name: Use Local Framework Unix
         run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
