--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,6 +94,7 @@ jobs:
         uses: actions/checkout@v3.3.0
         with:
          repository: cai1hsu/osu-framework
+         path:  ${{ github.workspace }}/../
 
       - name: Use Local Framework Windows
         if: matrix.os.fullname == 'windows-latest'
