--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,16 +90,17 @@ jobs:
         with:
           dotnet-version: "6.0.x"
 
-      - name: Checkout Local Framewrok
-        run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
-
       - name: Use Local Framework Windows
         if: matrix.os.fullname == 'windows-latest'
-        run: .\UseLocalFramework.ps1
+        run: |
+          git clone https://github.com/cai1hsu/osu-framework ..\osu-framework 
+          .\UseLocalFramework.ps1
 
       - name: Use Local Framework Unix
         if: matrix.os.fullname == 'macos-latest' || matrix.os.fullname == 'ubuntu-latest'
-        run: chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
+        run: |
+          git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
+          chmod +x UseLocalFramework.sh && ./UseLocalFramework.sh
 
       - name: Compile
         run: dotnet build -c Debug -warnaserror osu.Desktop.slnf
@@ -131,7 +132,7 @@ jobs:
           dotnet-version: "6.0.x"
       
       - name: Checkout Local Framewrok
-        run: git clone https://github.com/cai1hsu/osu-framework ../osu-framework 
+        run: git clone https://github.com/cai1hsu/osu-framework ..\osu-framework 
 
       - name: Use Local Framework
         run: .\UseLocalFramework.ps1
